[gd_scene load_steps=2 format=3 uid="uid://bb2ko7vf8sgbp"]

[ext_resource type="Script" path="res://codeBranch.gd" id="1_bwxt2"]

[node name="codeBranch" type="GraphNode"]
offset_right = 9.0
offset_bottom = 55.0
draggable = false
selectable = false
title = "Code Branch"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_bwxt2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "Delete"

[node name="MoveUp" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "⮝"

[node name="MoveDown" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "⮟"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Branch ID"

[node name="Id" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="HBoxContainer/MoveDown" to="." method="_on_move_down_pressed"]
